y.output
   0  $accept : program $end

   1  program : block

   2  block : DECLARE declaration block_alpha BEGIN statement statement_alpha END

   3  block_alpha : SEMICOLON declaration block_alpha
   4              |

   5  statement_alpha : SEMICOLON statement statement_alpha
   6                  |

   7  statement_list : statement statement_alpha

   8  statement : label_definition statement_1
   9            | statement_1
  10            | error SEMICOLON

  11  statement_1 : expression
  12              | iteration
  13              | jump

  14  label_definition : IDENTIFIER COLON

  15  iteration : WHILE expression loop
  16            | FOR IDENTIFIER FROM expression TO expression loop

  17  loop : DO statement_list END

  18  jump : GOTO IDENTIFIER

  19  declaration : variable_declaration
  20              | identity_declaration
  21              | procedure_declaration
  22              | type_declaration

  23  variable_declaration : IDENTIFIER COLON type_specification
  24                       | IDENTIFIER COLON ARRAY LEFTSQUARE bound_pair bound_pair_alpha RIGHTSQUARE ARRAY type_specification

  25  type_specification : IDENTIFIER
  26                     | REF type_specification
  27                     | REF array_type
  28                     | procedure_type

  29  bound_pair : expression COLON expression

  30  array_type : ARRAY LEFTSQUARE special RIGHTSQUARE OF type_specification

  31  special : COMMA special
  32          |

  33  procedure_type : PROCEDURE procedure_nonempty

  34  procedure_nonempty : LEFTPAR type_specification type_specification_alpha RIGHTPAR
  35                     | result_type
  36                     | LEFTPAR type_specification type_specification_alpha RIGHTPAR result_type
  37                     |

  38  identity_declaration : IDENTIFIER IS expression COLON type_specification

  39  procedure_declaration : PROCEDURE IDENTIFIER procedure

  40  procedure : LEFTPAR parameter parameter_alpha RIGHTPAR SEMICOLON expression
  41            | result_type SEMICOLON expression
  42            | LEFTPAR parameter parameter_alpha RIGHTPAR result_type SEMICOLON expression
  43            | SEMICOLON expression

  44  parameter : IDENTIFIER COLON type_specification

  45  result_type : COLON type_specification

  46  type_declaration : TYPE IDENTIFIER EQ record_type

  47  record_type : RECORD field field_alpha END

  48  field : IDENTIFIER COLON type_specification

  49  bound_pair_alpha : COMMA bound_pair bound_pair_alpha
  50                   |

  51  type_specification_alpha : COMMA type_specification type_specification_alpha
  52                           |

  53  parameter_alpha : SEMICOLON parameter parameter_alpha
  54                  |

  55  field_alpha : SEMICOLON field field_alpha
  56              |

  57  name : IDENTIFIER
  58       | name DOT IDENTIFIER
  59       | name LEFTSQUARE expression expression_alpha RIGHTSQUARE
  60       | NEW IDENTIFIER
  61       | procedure_call

  62  expression : assignment
  63             | disjunction

  64  assign : ASSIGNMENT

  65  assignment : name assign expression

  66  disjunction : conjunction
  67              | disjunction OR conjunction

  68  conjunction : comparison
  69              | conjunction AND comparison

  70  comparison : relation
  71             | relation eqop relation

  72  eqop : EQ
  73       | ET

  74  relation : sum relop sum
  75           | sum

  76  relop : LT
  77        | GT

  78  sum : term
  79      | sum addop term

  80  addop : PLUS
  81        | MINUS

  82  term : factor
  83       | term mulop factor

  84  mulop : MULTI
  85        | DIVIDE
  86        | DIV
  87        | MOD

  88  factor : primary
  89         | unop factor

  90  unop : PLUS
  91       | MINUS
  92       | NOT

  93  primary : denotation
  94          | name
  95          | LEFTPAR expression RIGHTPAR
  96          | block
  97          | clause

  98  denotation : integer
  99             | FLOAT

 100  procedure_call : name LEFTPAR argument argument_alpha RIGHTPAR

 101  argument : expression

 102  clause : conditional_clause
 103         | case_clause

 104  conditional_clause : IF expression THEN statement_list END
 105                     | IF expression THEN statement_list ELSE statement_list END

 106  case_clause : CASE expression OF case_label COLON statement_list statement_list_alpha ELSE statement_list END

 107  case_label : integer

 108  expression_alpha : COMMA expression expression_alpha
 109                   |

 110  argument_alpha : COMMA argument argument_alpha
 111                 |

 112  statement_list_alpha : DOUBLESLASH statement_list statement_list_alpha
 113                       |

 114  integer : INTEGER

state 0
	$accept : . program $end  (0)

	DECLARE  shift 1
	.  error

	program  goto 2
	block  goto 3


state 1
	block : DECLARE . declaration block_alpha BEGIN statement statement_alpha END  (2)

	IDENTIFIER  shift 4
	PROCEDURE  shift 5
	TYPE  shift 6
	.  error

	declaration  goto 7
	variable_declaration  goto 8
	identity_declaration  goto 9
	procedure_declaration  goto 10
	type_declaration  goto 11


state 2
	$accept : program . $end  (0)

	$end  accept


state 3
	program : block .  (1)

	.  reduce 1


state 4
	variable_declaration : IDENTIFIER . COLON type_specification  (23)
	variable_declaration : IDENTIFIER . COLON ARRAY LEFTSQUARE bound_pair bound_pair_alpha RIGHTSQUARE ARRAY type_specification  (24)
	identity_declaration : IDENTIFIER . IS expression COLON type_specification  (38)

	IS  shift 12
	COLON  shift 13
	.  error


state 5
	procedure_declaration : PROCEDURE . IDENTIFIER procedure  (39)

	IDENTIFIER  shift 14
	.  error


state 6
	type_declaration : TYPE . IDENTIFIER EQ record_type  (46)

	IDENTIFIER  shift 15
	.  error


state 7
	block : DECLARE declaration . block_alpha BEGIN statement statement_alpha END  (2)
	block_alpha : .  (4)

	SEMICOLON  shift 16
	BEGIN  reduce 4

	block_alpha  goto 17


state 8
	declaration : variable_declaration .  (19)

	.  reduce 19


state 9
	declaration : identity_declaration .  (20)

	.  reduce 20


state 10
	declaration : procedure_declaration .  (21)

	.  reduce 21


state 11
	declaration : type_declaration .  (22)

	.  reduce 22


state 12
	identity_declaration : IDENTIFIER IS . expression COLON type_specification  (38)

	INTEGER  shift 18
	FLOAT  shift 19
	IDENTIFIER  shift 20
	DECLARE  shift 1
	CASE  shift 21
	IF  shift 22
	NEW  shift 23
	NOT  shift 24
	LEFTPAR  shift 25
	PLUS  shift 26
	MINUS  shift 27
	.  error

	block  goto 28
	expression  goto 29
	name  goto 30
	procedure_call  goto 31
	assignment  goto 32
	disjunction  goto 33
	conjunction  goto 34
	comparison  goto 35
	relation  goto 36
	sum  goto 37
	term  goto 38
	factor  goto 39
	primary  goto 40
	unop  goto 41
	denotation  goto 42
	clause  goto 43
	integer  goto 44
	conditional_clause  goto 45
	case_clause  goto 46


state 13
	variable_declaration : IDENTIFIER COLON . type_specification  (23)
	variable_declaration : IDENTIFIER COLON . ARRAY LEFTSQUARE bound_pair bound_pair_alpha RIGHTSQUARE ARRAY type_specification  (24)

	IDENTIFIER  shift 47
	ARRAY  shift 48
	PROCEDURE  shift 49
	REF  shift 50
	.  error

	type_specification  goto 51
	procedure_type  goto 52


state 14
	procedure_declaration : PROCEDURE IDENTIFIER . procedure  (39)

	COLON  shift 53
	SEMICOLON  shift 54
	LEFTPAR  shift 55
	.  error

	result_type  goto 56
	procedure  goto 57


state 15
	type_declaration : TYPE IDENTIFIER . EQ record_type  (46)

	EQ  shift 58
	.  error


state 16
	block_alpha : SEMICOLON . declaration block_alpha  (3)

	IDENTIFIER  shift 4
	PROCEDURE  shift 5
	TYPE  shift 6
	.  error

	declaration  goto 59
	variable_declaration  goto 8
	identity_declaration  goto 9
	procedure_declaration  goto 10
	type_declaration  goto 11


state 17
	block : DECLARE declaration block_alpha . BEGIN statement statement_alpha END  (2)

	BEGIN  shift 60
	.  error


state 18
	integer : INTEGER .  (114)

	.  reduce 114


state 19
	denotation : FLOAT .  (99)

	.  reduce 99


state 20
	name : IDENTIFIER .  (57)

	.  reduce 57


state 21
	case_clause : CASE . expression OF case_label COLON statement_list statement_list_alpha ELSE statement_list END  (106)

	INTEGER  shift 18
	FLOAT  shift 19
	IDENTIFIER  shift 20
	DECLARE  shift 1
	CASE  shift 21
	IF  shift 22
	NEW  shift 23
	NOT  shift 24
	LEFTPAR  shift 25
	PLUS  shift 26
	MINUS  shift 27
	.  error

	block  goto 28
	expression  goto 61
	name  goto 30
	procedure_call  goto 31
	assignment  goto 32
	disjunction  goto 33
	conjunction  goto 34
	comparison  goto 35
	relation  goto 36
	sum  goto 37
	term  goto 38
	factor  goto 39
	primary  goto 40
	unop  goto 41
	denotation  goto 42
	clause  goto 43
	integer  goto 44
	conditional_clause  goto 45
	case_clause  goto 46


state 22
	conditional_clause : IF . expression THEN statement_list END  (104)
	conditional_clause : IF . expression THEN statement_list ELSE statement_list END  (105)

	INTEGER  shift 18
	FLOAT  shift 19
	IDENTIFIER  shift 20
	DECLARE  shift 1
	CASE  shift 21
	IF  shift 22
	NEW  shift 23
	NOT  shift 24
	LEFTPAR  shift 25
	PLUS  shift 26
	MINUS  shift 27
	.  error

	block  goto 28
	expression  goto 62
	name  goto 30
	procedure_call  goto 31
	assignment  goto 32
	disjunction  goto 33
	conjunction  goto 34
	comparison  goto 35
	relation  goto 36
	sum  goto 37
	term  goto 38
	factor  goto 39
	primary  goto 40
	unop  goto 41
	denotation  goto 42
	clause  goto 43
	integer  goto 44
	conditional_clause  goto 45
	case_clause  goto 46


state 23
	name : NEW . IDENTIFIER  (60)

	IDENTIFIER  shift 63
	.  error


state 24
	unop : NOT .  (92)

	.  reduce 92


state 25
	primary : LEFTPAR . expression RIGHTPAR  (95)

	INTEGER  shift 18
	FLOAT  shift 19
	IDENTIFIER  shift 20
	DECLARE  shift 1
	CASE  shift 21
	IF  shift 22
	NEW  shift 23
	NOT  shift 24
	LEFTPAR  shift 25
	PLUS  shift 26
	MINUS  shift 27
	.  error

	block  goto 28
	expression  goto 64
	name  goto 30
	procedure_call  goto 31
	assignment  goto 32
	disjunction  goto 33
	conjunction  goto 34
	comparison  goto 35
	relation  goto 36
	sum  goto 37
	term  goto 38
	factor  goto 39
	primary  goto 40
	unop  goto 41
	denotation  goto 42
	clause  goto 43
	integer  goto 44
	conditional_clause  goto 45
	case_clause  goto 46


state 26
	unop : PLUS .  (90)

	.  reduce 90


state 27
	unop : MINUS .  (91)

	.  reduce 91


state 28
	primary : block .  (96)

	.  reduce 96


state 29
	identity_declaration : IDENTIFIER IS expression . COLON type_specification  (38)

	COLON  shift 65
	.  error


state 30
	name : name . DOT IDENTIFIER  (58)
	name : name . LEFTSQUARE expression expression_alpha RIGHTSQUARE  (59)
	assignment : name . assign expression  (65)
	primary : name .  (94)
	procedure_call : name . LEFTPAR argument argument_alpha RIGHTPAR  (100)

	ASSIGNMENT  shift 66
	DOT  shift 67
	LEFTPAR  shift 68
	LEFTSQUARE  shift 69
	AND  reduce 94
	BEGIN  reduce 94
	DIV  reduce 94
	DO  reduce 94
	ELSE  reduce 94
	END  reduce 94
	MOD  reduce 94
	OF  reduce 94
	OR  reduce 94
	THEN  reduce 94
	TO  reduce 94
	COLON  reduce 94
	SEMICOLON  reduce 94
	COMMA  reduce 94
	DOUBLESLASH  reduce 94
	RIGHTPAR  reduce 94
	RIGHTSQUARE  reduce 94
	LT  reduce 94
	GT  reduce 94
	EQ  reduce 94
	ET  reduce 94
	PLUS  reduce 94
	MINUS  reduce 94
	MULTI  reduce 94
	DIVIDE  reduce 94

	assign  goto 70


state 31
	name : procedure_call .  (61)

	.  reduce 61


state 32
	expression : assignment .  (62)

	.  reduce 62


state 33
	expression : disjunction .  (63)
	disjunction : disjunction . OR conjunction  (67)

	OR  shift 71
	BEGIN  reduce 63
	DO  reduce 63
	ELSE  reduce 63
	END  reduce 63
	OF  reduce 63
	THEN  reduce 63
	TO  reduce 63
	COLON  reduce 63
	SEMICOLON  reduce 63
	COMMA  reduce 63
	DOUBLESLASH  reduce 63
	RIGHTPAR  reduce 63
	RIGHTSQUARE  reduce 63


state 34
	disjunction : conjunction .  (66)
	conjunction : conjunction . AND comparison  (69)

	AND  shift 72
	BEGIN  reduce 66
	DO  reduce 66
	ELSE  reduce 66
	END  reduce 66
	OF  reduce 66
	OR  reduce 66
	THEN  reduce 66
	TO  reduce 66
	COLON  reduce 66
	SEMICOLON  reduce 66
	COMMA  reduce 66
	DOUBLESLASH  reduce 66
	RIGHTPAR  reduce 66
	RIGHTSQUARE  reduce 66


state 35
	conjunction : comparison .  (68)

	.  reduce 68


state 36
	comparison : relation .  (70)
	comparison : relation . eqop relation  (71)

	EQ  shift 73
	ET  shift 74
	AND  reduce 70
	BEGIN  reduce 70
	DO  reduce 70
	ELSE  reduce 70
	END  reduce 70
	OF  reduce 70
	OR  reduce 70
	THEN  reduce 70
	TO  reduce 70
	COLON  reduce 70
	SEMICOLON  reduce 70
	COMMA  reduce 70
	DOUBLESLASH  reduce 70
	RIGHTPAR  reduce 70
	RIGHTSQUARE  reduce 70

	eqop  goto 75


state 37
	relation : sum . relop sum  (74)
	relation : sum .  (75)
	sum : sum . addop term  (79)

	LT  shift 76
	GT  shift 77
	PLUS  shift 78
	MINUS  shift 79
	AND  reduce 75
	BEGIN  reduce 75
	DO  reduce 75
	ELSE  reduce 75
	END  reduce 75
	OF  reduce 75
	OR  reduce 75
	THEN  reduce 75
	TO  reduce 75
	COLON  reduce 75
	SEMICOLON  reduce 75
	COMMA  reduce 75
	DOUBLESLASH  reduce 75
	RIGHTPAR  reduce 75
	RIGHTSQUARE  reduce 75
	EQ  reduce 75
	ET  reduce 75

	relop  goto 80
	addop  goto 81


state 38
	sum : term .  (78)
	term : term . mulop factor  (83)

	DIV  shift 82
	MOD  shift 83
	MULTI  shift 84
	DIVIDE  shift 85
	AND  reduce 78
	BEGIN  reduce 78
	DO  reduce 78
	ELSE  reduce 78
	END  reduce 78
	OF  reduce 78
	OR  reduce 78
	THEN  reduce 78
	TO  reduce 78
	COLON  reduce 78
	SEMICOLON  reduce 78
	COMMA  reduce 78
	DOUBLESLASH  reduce 78
	RIGHTPAR  reduce 78
	RIGHTSQUARE  reduce 78
	LT  reduce 78
	GT  reduce 78
	EQ  reduce 78
	ET  reduce 78
	PLUS  reduce 78
	MINUS  reduce 78

	mulop  goto 86


state 39
	term : factor .  (82)

	.  reduce 82


state 40
	factor : primary .  (88)

	.  reduce 88


state 41
	factor : unop . factor  (89)

	INTEGER  shift 18
	FLOAT  shift 19
	IDENTIFIER  shift 20
	DECLARE  shift 1
	CASE  shift 21
	IF  shift 22
	NEW  shift 23
	NOT  shift 24
	LEFTPAR  shift 25
	PLUS  shift 26
	MINUS  shift 27
	.  error

	block  goto 28
	name  goto 87
	procedure_call  goto 31
	factor  goto 88
	primary  goto 40
	unop  goto 41
	denotation  goto 42
	clause  goto 43
	integer  goto 44
	conditional_clause  goto 45
	case_clause  goto 46


state 42
	primary : denotation .  (93)

	.  reduce 93


state 43
	primary : clause .  (97)

	.  reduce 97


state 44
	denotation : integer .  (98)

	.  reduce 98


state 45
	clause : conditional_clause .  (102)

	.  reduce 102


state 46
	clause : case_clause .  (103)

	.  reduce 103


state 47
	type_specification : IDENTIFIER .  (25)

	.  reduce 25


state 48
	variable_declaration : IDENTIFIER COLON ARRAY . LEFTSQUARE bound_pair bound_pair_alpha RIGHTSQUARE ARRAY type_specification  (24)

	LEFTSQUARE  shift 89
	.  error


state 49
	procedure_type : PROCEDURE . procedure_nonempty  (33)
	procedure_nonempty : .  (37)

	COLON  shift 53
	LEFTPAR  shift 90
	BEGIN  reduce 37
	END  reduce 37
	SEMICOLON  reduce 37
	COMMA  reduce 37
	RIGHTPAR  reduce 37

	procedure_nonempty  goto 91
	result_type  goto 92


state 50
	type_specification : REF . type_specification  (26)
	type_specification : REF . array_type  (27)

	IDENTIFIER  shift 47
	ARRAY  shift 93
	PROCEDURE  shift 49
	REF  shift 50
	.  error

	type_specification  goto 94
	array_type  goto 95
	procedure_type  goto 52


state 51
	variable_declaration : IDENTIFIER COLON type_specification .  (23)

	.  reduce 23


state 52
	type_specification : procedure_type .  (28)

	.  reduce 28


state 53
	result_type : COLON . type_specification  (45)

	IDENTIFIER  shift 47
	PROCEDURE  shift 49
	REF  shift 50
	.  error

	type_specification  goto 96
	procedure_type  goto 52


state 54
	procedure : SEMICOLON . expression  (43)

	INTEGER  shift 18
	FLOAT  shift 19
	IDENTIFIER  shift 20
	DECLARE  shift 1
	CASE  shift 21
	IF  shift 22
	NEW  shift 23
	NOT  shift 24
	LEFTPAR  shift 25
	PLUS  shift 26
	MINUS  shift 27
	.  error

	block  goto 28
	expression  goto 97
	name  goto 30
	procedure_call  goto 31
	assignment  goto 32
	disjunction  goto 33
	conjunction  goto 34
	comparison  goto 35
	relation  goto 36
	sum  goto 37
	term  goto 38
	factor  goto 39
	primary  goto 40
	unop  goto 41
	denotation  goto 42
	clause  goto 43
	integer  goto 44
	conditional_clause  goto 45
	case_clause  goto 46


state 55
	procedure : LEFTPAR . parameter parameter_alpha RIGHTPAR SEMICOLON expression  (40)
	procedure : LEFTPAR . parameter parameter_alpha RIGHTPAR result_type SEMICOLON expression  (42)

	IDENTIFIER  shift 98
	.  error

	parameter  goto 99


state 56
	procedure : result_type . SEMICOLON expression  (41)

	SEMICOLON  shift 100
	.  error


state 57
	procedure_declaration : PROCEDURE IDENTIFIER procedure .  (39)

	.  reduce 39


state 58
	type_declaration : TYPE IDENTIFIER EQ . record_type  (46)

	RECORD  shift 101
	.  error

	record_type  goto 102


state 59
	block_alpha : SEMICOLON declaration . block_alpha  (3)
	block_alpha : .  (4)

	SEMICOLON  shift 16
	BEGIN  reduce 4

	block_alpha  goto 103


state 60
	block : DECLARE declaration block_alpha BEGIN . statement statement_alpha END  (2)
